--- a/src/style.scss
+++ b/src/style.scss
@@ -1,14 +1,7 @@
-.pdf-wrapper {
-  cursor: crosshair;
-  margin: 0 auto;
-}
 
-.editor-wrapper {
-  position: absolute;
-  min-width: 120px;
-  color: #000;
-  padding: 5px;
-  cursor: move;
+.pdf-embed-canvas-wrapper {
+  /* cursor: crosshair; */
+  margin: 0 auto;
 }
 
 .pdf-embed {
@@ -25,8 +18,29 @@
   margin-top: 1em;
 }
 
+.pdf-embed-editor-wrapper {
+  position: absolute;
+  min-width: 120px;
+  color: #000;
+  padding: 5px;
+  cursor: move;
+}
+
 .pdf-embed-editor {
   padding: 4px;
   border: 1px solid transparent;
   cursor: text;
+}
+
+.pdf-embed-editor-selected,
+.pdf-embed-editor-hover {
+  background-color: #fafafa;
+}
+
+.pdf-embed-editor-hover {
+  opacity: 0.5;
+}
+
+.pdf-embed-editor-draggable {
+  border: 1px solid #ddd;
 }
